// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Viewer component should  contain ControlPanel for custom mode 1`] = `
.emotion-0 {
  background-color: #f00;
  height: 100%;
  width: 100%;
  position: relative;
}

.emotion-0>.miew-canvas {
  height: 100%;
  width: 100%;
}

.emotion-0>.overlay {
  position: absolute;
  top: 47px;
  right: 10px;
  border-radius: 4px;
  color: #C0C0C0;
  background-color: rgba(142, 67, 67, 0.75);
}

.emotion-0>.overlay p {
  margin: 10px;
  text-align: left;
}

<div>
  <div>
    Control Panel
  </div>
  <div
    class="emotion-0"
  />
</div>
`;

exports[`Viewer component should  contain ControlPanel for default mode 1`] = `
.emotion-0 {
  background-color: #f00;
  height: 100%;
  width: 100%;
  position: relative;
}

.emotion-0>.miew-canvas {
  height: 100%;
  width: 100%;
}

.emotion-0>.overlay {
  position: absolute;
  top: 47px;
  right: 10px;
  border-radius: 4px;
  color: #C0C0C0;
  background-color: rgba(142, 67, 67, 0.75);
}

.emotion-0>.overlay p {
  margin: 10px;
  text-align: left;
}

<div>
  <div>
    Control Panel
  </div>
  <div
    class="emotion-0"
  />
</div>
`;

exports[`Viewer component should apply custom theme when theme prop is provided 1`] = `
.emotion-0 {
  background-color: #f00;
  height: 100%;
  width: 100%;
  position: relative;
}

.emotion-0>.miew-canvas {
  height: 100%;
  width: 100%;
}

.emotion-0>.overlay {
  position: absolute;
  top: 10px;
  right: 10px;
  border-radius: 4px;
  color: #C0C0C0;
  background-color: rgba(142, 67, 67, 0.75);
}

.emotion-0>.overlay p {
  margin: 10px;
  text-align: left;
}

<div>
  <div
    class="emotion-0"
  />
</div>
`;

exports[`Viewer component should not contain ControlPanel for minimal mode 1`] = `
.emotion-0 {
  background-color: #f00;
  height: 100%;
  width: 100%;
  position: relative;
}

.emotion-0>.miew-canvas {
  height: 100%;
  width: 100%;
}

.emotion-0>.overlay {
  position: absolute;
  top: 10px;
  right: 10px;
  border-radius: 4px;
  color: #C0C0C0;
  background-color: rgba(142, 67, 67, 0.75);
}

.emotion-0>.overlay p {
  margin: 10px;
  text-align: left;
}

<div>
  <div
    class="emotion-0"
  />
</div>
`;
